--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "moment": "^2.17.1",
     "ng2-bootstrap": "^1.4.0",
     "ng2-charts": "^1.5.0",
+    "ng2-dnd": "^2.2.2",
     "ng2-restangular": "^0.1.29",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
